--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="sum_withouth_the_highest.js"></script>
+    <script src="String_repeat.js"></script>
   </body>
 </html>
