solve three problems jennys message opposite number and return negative

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="Convert_number_to_reversed_array_of_digits.js"></script>
+    <script src="jenny`s_message.js"></script>
   </body>
 </html>
